<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.13">
  <POU Name="FB_T1_InputSource" Id="{fbbc7d4c-fe99-47a0-a2a3-fc0ec32139bb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_T1_InputSource IMPLEMENTS I_InputSource
VAR
	_eDataState: E_DataSourceState;
	
	_nMaxOversamplingFactor: UDINT := 1;
	
	_nElements: UDINT;
	_nCurrentElement: UDINT;
	_nDataHandle: ULINT;
	
	_nClientListHash: LWORD;
	_nCurrentClientHash: LWORD;
	
	_stInputs: ST_T1_Inputs;
	
	fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nState: FB_ALY_IotSymbol_UINT := (stConfig:= (sSymbolName:= 'GVL_Components.fbMachine.stAnalytics.nState'));
	fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nUnitsProduced: FB_ALY_IotSymbol_ULINT := (stConfig:= (sSymbolName:= 'GVL_Components.fbMachine.stAnalytics.nUnitsProduced'));
	fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nDefectiveUnits: FB_ALY_IotSymbol_ULINT := (stConfig:= (sSymbolName:= 'GVL_Components.fbMachine.stAnalytics.nDefectiveUnits'));
	fbIotSymbol_GVL_Components_fbMachine_stAnalytics_tMlCalculation: FB_ALY_IotSymbol_UDINT := (stConfig:= (sSymbolName:= 'GVL_Components.fbMachine.stAnalytics.tMlCalculation'));
	
	//Target T1 = Broker:"localhost" Topic:"DefaultMainTopic/PlcStream1"
	fbStreamHelper: FB_ALY_StreamHelper;
	bConfigured: BOOL := FALSE;
	
	fbTON_DataTimeout: TON;
END_VAR
VAR_STAT
	_nClientIndex: INT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="I_InputSource" Id="{e1dcc566-0b00-41ec-a611-4ddb13b5085b}" />
    <Method Name="AddClient" Id="{315e74f9-9257-452b-b362-4dc49cf3649a}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[METHOD AddClient : BOOL
VAR_OUTPUT
	nClientID: LWORD;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[nClientID:= TO_LWORD(EXPT(2,_nClientIndex));
_nClientIndex:= _nClientIndex + 1;

_nClientListHash:= _nClientListHash + nClientID;]]></ST>
      </Implementation>
    </Method>
    <Property Name="bReadNewData" Id="{16f7a504-e503-4983-ae04-e5a095d79fa6}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[PROPERTY bReadNewData : BOOL]]></Declaration>
      <Get Name="Get" Id="{313b3484-4840-44ee-9167-737a8f6a9724}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[bReadNewData:= _nElements = 0 OR _nCurrentClientHash >= _nClientListHash;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Call" Id="{ca01f449-2322-4938-8163-f106edd3b239}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[METHOD Call : BOOL
VAR
	stConfig: ST_ALY_StreamHelper_Config;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT fbStreamHelper.bConfigured THEN
	stConfig.nObjectID:= 16#01010110;
	stConfig.nNumInputBuffer:= 20;
	fbStreamHelper.Configure(stConfig);
END_IF

IF NOT bConfigured THEN
	//GVL_Components.fbMachine.stAnalytics.nState
	fbStreamHelper.AddIotSymbol(fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nState);
	//GVL_Components.fbMachine.stAnalytics.nUnitsProduced
	fbStreamHelper.AddIotSymbol(fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nUnitsProduced);
	//GVL_Components.fbMachine.stAnalytics.nDefectiveUnits
	fbStreamHelper.AddIotSymbol(fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nDefectiveUnits);
	//GVL_Components.fbMachine.stAnalytics.tMlCalculation
	fbStreamHelper.AddIotSymbol(fbIotSymbol_GVL_Components_fbMachine_stAnalytics_tMlCalculation);

	bConfigured:= TRUE;
END_IF

fbStreamHelper.Call();
IF fbStreamHelper.bError THEN
	_eDataState:= E_DataSourceState.eError;
ELSIF NOT fbStreamHelper.bConnected THEN
	_eDataState:= E_DataSourceState.eNotConnected;
ELSE
	_nElements:= fbStreamHelper.nNumElements;
	IF _nElements > 0 THEN
		_eDataState:= E_DataSourceState.eReceiveData;
	END_IF

	fbTON_DataTimeout(IN:= _nElements = 0, PT:= T#5S);
	IF fbTON_DataTimeout.Q THEN
		_eDataState:= E_DataSourceState.eWaitForData;
	END_IF
END_IF

IF _nElements > 0 THEN
	_nDataHandle:= _nDataHandle + 1;
	_nCurrentClientHash:= 0;
END_IF

_nCurrentElement:= 0;]]></ST>
      </Implementation>
    </Method>
    <Method Name="ClientDone" Id="{bf19a8bd-b79f-4a04-9aa1-24abf9ac7972}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[METHOD ClientDone : BOOL
VAR_INPUT
	nClientID: LWORD;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_nCurrentClientHash:=  _nCurrentClientHash + nClientID;]]></ST>
      </Implementation>
    </Method>
    <Property Name="eDataState" Id="{ed605f32-b43d-4e05-86d6-4d04f9981256}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[PROPERTY eDataState : E_DataSourceState]]></Declaration>
      <Get Name="Get" Id="{12dd5f27-34f0-4511-952e-87b7af302fc7}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[eDataState:= _eDataState;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="GetData" Id="{d6e405cd-3e34-4ed6-96af-d68922a35077}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[METHOD GetData : BOOL
VAR_INPUT
	nElement: UDINT;
	pInputs: PVOID;
	nInputsSize: UDINT;
END_VAR
VAR_OUTPUT
	nTimestamp: ULINT;
	nContext: DWORD;
END_VAR
VAR
	_nElement: UDINT;
	_pInputs: PVOID;
	_nInputsSize: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Analytics.fbT1_IecCriticalSection.Enter();

_nElement:= nElement;
_pInputs:= pInputs;
_nInputsSize:= nInputsSize;

nContext:= 0;
IF nElements > 0 THEN
	IF _nElement <= nElements THEN

		IF _nCurrentElement <> _nElement THEN

			//Set local raw inputs
			_stInputs.nGVL_Components_fbMachine_stAnalytics_nState:= fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nState.GetValue(_nElement);
			_stInputs.nGVL_Components_fbMachine_stAnalytics_nUnitsProduced:= fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nUnitsProduced.GetValue(_nElement);
			_stInputs.nGVL_Components_fbMachine_stAnalytics_nDefectiveUnits:= fbIotSymbol_GVL_Components_fbMachine_stAnalytics_nDefectiveUnits.GetValue(_nElement);
			_stInputs.nGVL_Components_fbMachine_stAnalytics_tMlCalculation:= fbIotSymbol_GVL_Components_fbMachine_stAnalytics_tMlCalculation.GetValue(_nElement);

			nContext:= E_DataSourceContext.eContext_1000;
			_nCurrentElement:= _nElement;
		END_IF

		//Set output values
		IF _pInputs > 0 THEN
			MEMCPY(_pInputs, ADR(_stInputs), _nInputsSize);
			nTimestamp:= fbStreamHelper.GetTimestampElement(_nElement);
		END_IF
	END_IF
	GetData:= TRUE;
ELSE
	GetData:= FALSE;
END_IF

Analytics.fbT1_IecCriticalSection.Leave();]]></ST>
      </Implementation>
    </Method>
    <Property Name="nDataHandle" Id="{25b8829c-9b48-4dc3-8882-fe2283e3cf6c}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[PROPERTY nDataHandle : ULINT]]></Declaration>
      <Get Name="Get" Id="{685394dd-f868-4dd6-8daa-0f7bdd5b38e9}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[nDataHandle:= _nDataHandle;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="nElements" Id="{3e736a4f-1557-46ba-b541-eaec3d098b7a}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[PROPERTY nElements : UDINT]]></Declaration>
      <Get Name="Get" Id="{2b573a8b-5de9-418d-9d2c-5010798406d1}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[nElements:= _nElements;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="NewDataAvailable" Id="{4847d983-5d67-4dc7-921e-5497973d374e}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[METHOD NewDataAvailable : BOOL
VAR_INPUT
	nLastDataHandle: ULINT;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[NewDataAvailable:= _nElements > 0 AND _nDataHandle <> nLastDataHandle;]]></ST>
      </Implementation>
    </Method>
    <Property Name="nMaxOversamplingFactor" Id="{788fabef-a447-4ace-84d4-c022167150a2}" FolderPath="I_InputSource\">
      <Declaration><![CDATA[PROPERTY nMaxOversamplingFactor : UDINT]]></Declaration>
      <Get Name="Get" Id="{d81778d6-ad07-417d-b841-cec93d912d67}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[nMaxOversamplingFactor:= _nMaxOversamplingFactor;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="FB_T1_InputSource">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.AddClient">
      <LineId Id="3" Count="2" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.bReadNewData.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.Call">
      <LineId Id="3" Count="40" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.ClientDone">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.eDataState.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.GetData">
      <LineId Id="3" Count="32" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.nDataHandle.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.nElements.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.NewDataAvailable">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_T1_InputSource.nMaxOversamplingFactor.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>